# PoseMamba

./: .gitignore  eval.sh  main.py  pyproject.toml  requirements.txt  vis.py
demo/lib/hrnet/: gen_kpts.py
lib/model/: csms6s.py
