[project]
name = "posemamba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chardet>=5.2.0",
    "easydict>=1.13",
    "einops>=0.8.1",
    "filterpy>=1.4.5",
    "fvcore>=0.1.5.post20221221",
    "imageio-ffmpeg>=0.6.0",
    "ipdb>=0.13.13",
    "moviepy>=2.2.1",
    "numba>=0.62.1",
    "opencv-python>=4.12.0.88",
    "packaging>=25.0",
    "prettytable>=3.16.0",
    "pytest>=8.4.2",
    "pytorch-metric-learning>=2.9.0",
    "roma>=1.5.4",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "submitit>=1.5.3",
    "tensorboardx>=2.6.4",
    "termcolor>=3.1.0",
    "thop>=0.1.1.post2209072238",
    "timm>=1.0.20",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm>=4.67.1",
    "triton>=3.5.0",
    "yacs>=0.1.8",
]
